商品購入が一旦できるように。テストの実装も
